tests/bindings/swift/phantom_coreFFI.h

uint16_t uniffi_phantom_core_checksum_method_acceptoutcome_session(void
    
);
uint16_t uniffi_phantom_core_checksum_method_acceptoutcome_take_early_data(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_accept(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_is_shutting_down(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_local_addr(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_metrics_prometheus_text(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_shutdown(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomlistener_verifying_key_bytes(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_connection_state(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_early_data_accepted(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_flush_queue(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_id(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_is_data_ready(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_is_pqc_ready(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_open_stream(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_peer_addr(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_queued_count(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_recv(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_resumption_hint(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_send(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomsession_set_state(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomstream_recv(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomstream_send_reliable(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomstream_send_unreliable(void
    
);
uint16_t uniffi_phantom_core_checksum_method_phantomstream_stream_id(void
    
);
uint16_t uniffi_phantom_core_checksum_constructor_phantomlistener_bind(void
    
);
uint16_t uniffi_phantom_core_checksum_constructor_phantomsession_connect(void
    
);
uint32_t ffi_phantom_core_uniffi_contract_version(void
    
);