tests/bindings/phantom_core.py

_UniffiLib.uniffi_phantom_core_checksum_method_acceptoutcome_session.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_acceptoutcome_take_early_data.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_acceptoutcome_take_early_data.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_accept.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_accept.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_is_shutting_down.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_is_shutting_down.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_local_addr.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_local_addr.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_metrics_prometheus_text.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_metrics_prometheus_text.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_shutdown.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_shutdown.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_verifying_key_bytes.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomlistener_verifying_key_bytes.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_close.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_connection_state.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_connection_state.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_early_data_accepted.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_early_data_accepted.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_flush_queue.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_flush_queue.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_id.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_is_data_ready.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_is_data_ready.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_is_pqc_ready.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_is_pqc_ready.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_open_stream.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_open_stream.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_peer_addr.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_peer_addr.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_queued_count.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_queued_count.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_recv.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_recv.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_resumption_hint.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_resumption_hint.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_send.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_send.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_set_state.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomsession_set_state.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_close.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_close.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_recv.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_recv.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_send_reliable.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_send_reliable.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_send_unreliable.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_send_unreliable.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_stream_id.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_method_phantomstream_stream_id.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_constructor_phantomlistener_bind.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_constructor_phantomlistener_bind.restype = ctypes.c_uint16
_UniffiLib.uniffi_phantom_core_checksum_constructor_phantomsession_connect.argtypes = (
)
_UniffiLib.uniffi_phantom_core_checksum_constructor_phantomsession_connect.restype = ctypes.c_uint16
_UniffiLib.ffi_phantom_core_uniffi_contract_version.argtypes = (
)
_UniffiLib.ffi_phantom_core_uniffi_contract_version.restype = ctypes.c_uint32

_uniffi_check_contract_api_version(_UniffiLib)
# _uniffi_check_api_checksums(_UniffiLib)

# Public interface members begin here.


class _UniffiConverterUInt8(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u8"
    VALUE_MIN = 0
    VALUE_MAX = 2**8

    @staticmethod
    def read(buf):
        return buf.read_u8()

    @staticmethod
    def write(value, buf):
        buf.write_u8(value)

class _UniffiConverterUInt16(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u16"
    VALUE_MIN = 0
    VALUE_MAX = 2**16

    @staticmethod
    def read(buf):
        return buf.read_u16()

    @staticmethod
    def write(value, buf):
        buf.write_u16(value)

class _UniffiConverterUInt32(_UniffiConverterPrimitiveInt):
    CLASS_NAME = "u32"
    VALUE_MIN = 0
    VALUE_MAX = 2**32

    @staticmethod
    def read(buf):
        return buf.read_u32()

    @staticmethod
    def write(value, buf):
        buf.write_u32(value)

class _UniffiConverterBool:
    @classmethod
    def check_lower(cls, value):
        return not not value

    @classmethod
    def lower(cls, value):
        return 1 if value else 0

    @staticmethod
    def lift(value):
        return value != 0

    @classmethod
    def read(cls, buf):
        return cls.lift(buf.read_u8())

    @classmethod
    def write(cls, value, buf):
        buf.write_u8(value)

class _UniffiConverterString:
    @staticmethod
    def check_lower(value):
        if not isinstance(value, str):
            raise TypeError("argument must be str, not {}".format(type(value).__name__))
        return value

    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative string length")
        utf8_bytes = buf.read(size)
        return utf8_bytes.decode("utf-8")

    @staticmethod
    def write(value, buf):
        utf8_bytes = value.encode("utf-8")
        buf.write_i32(len(utf8_bytes))
        buf.write(utf8_bytes)

    @staticmethod
    def lift(buf):
        with buf.consume_with_stream() as stream:
            return stream.read(stream.remaining()).decode("utf-8")

    @staticmethod
    def lower(value):
        with _UniffiRustBuffer.alloc_with_builder() as builder:
            builder.write(value.encode("utf-8"))
            return builder.finalize()

class _UniffiConverterBytes(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        size = buf.read_i32()
        if size < 0:
            raise InternalError("Unexpected negative byte string length")
        return buf.read(size)

    @staticmethod
    def check_lower(value):
        try:
            memoryview(value)
        except TypeError:
            raise TypeError("a bytes-like object is required, not {!r}".format(type(value).__name__))

    @staticmethod
    def write(value, buf):
        buf.write_i32(len(value))
        buf.write(value)

# The Duration type.
Duration = datetime.timedelta

# There is a loss of precision when converting from Rust durations,
# which are accurate to the nanosecond,
# to Python durations, which are only accurate to the microsecond.
class _UniffiConverterDuration(_UniffiConverterRustBuffer):
    @staticmethod
    def read(buf):
        seconds = buf.read_u64()
        microseconds = buf.read_u32() / 1.0e3
        return datetime.timedelta(seconds=seconds, microseconds=microseconds)

    @staticmethod
    def check_lower(value):
        seconds = value.seconds + value.days * 24 * 3600
        if seconds < 0:
            raise ValueError("Invalid duration, must be non-negative")

    @staticmethod
    def write(value, buf):
        seconds = value.seconds + value.days * 24 * 3600
        nanoseconds = value.microseconds * 1000
        buf.write_i64(seconds)
        buf.write_u32(nanoseconds)










class PhantomConfig:
    keepalive_interval: "Duration"
    """
    Interval between keep-alive pings
    """

    session_timeout: "Duration"
    """
    Session inactivity timeout
    """

    max_packet_size: "int"
    """
    Maximum packet size (MTU)
    """

    send_buffer_size: "int"
    """
    Send buffer size in packets
    """

    recv_buffer_size: "int"
    """
    Receive buffer size in packets
    """

    session_cache_capacity: "int"
    """
    Maximum tickets in session cache
    """

    session_ticket_lifetime: "Duration"
    """
    Lifetime of a session ticket
    """

    auto_fallback: "bool"
    """
    Enable automatic transport fallback
    """

    fallback_loss_threshold: "int"
    """
    Packet loss percentage to trigger fallback
    """

    fallback_failure_threshold: "int"
    """
    Connection failures to trigger fallback
    """

    connect_timeout: "Duration"
    """
    Timeout for connection attempts
    """

    upgrade_delay: "Duration"
    """
    Delay before attempting to upgrade transport
    """

    def __init__(self, *, keepalive_interval: "Duration", session_timeout: "Duration", max_packet_size: "int", send_buffer_size: "int", recv_buffer_size: "int", session_cache_capacity: "int", session_ticket_lifetime: "Duration", auto_fallback: "bool", fallback_loss_threshold: "int", fallback_failure_threshold: "int", connect_timeout: "Duration", upgrade_delay: "Duration"):
        self.keepalive_interval = keepalive_interval
        self.session_timeout = session_timeout
        self.max_packet_size = max_packet_size
        self.send_buffer_size = send_buffer_size
        self.recv_buffer_size = recv_buffer_size
        self.session_cache_capacity = session_cache_capacity
        self.session_ticket_lifetime = session_ticket_lifetime
        self.auto_fallback = auto_fallback
        self.fallback_loss_threshold = fallback_loss_threshold
        self.fallback_failure_threshold = fallback_failure_threshold
        self.connect_timeout = connect_timeout
        self.upgrade_delay = upgrade_delay
